objects/copado__User_Story_Data_Commit__c.object
<CustomObject>
    <fields>
        <fullName>copado__Commit_Date__c</fullName>
        <defaultValue>NOW()</defaultValue>
        <label>Commit Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>copado__Commit_Message__c</fullName>
        <label>Commit Message</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>copado__Data_Set__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Data Set</label>
        <referenceTo>copado__Data_Set__c</referenceTo>
        <relationshipLabel>User Story Data Commits</relationshipLabel>
        <relationshipName>User_Story_Data_Commits</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>copado__Execution_Job__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Execution Job</label>
        <referenceTo>copado__Deployment__c</referenceTo>
        <relationshipLabel>User Story Data Commits</relationshipLabel>
        <relationshipName>User_Story_Data_Commits</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>copado__Status__c</fullName>
        <formula>TEXT(copado__Execution_Job__r.copado__Status__c)</formula>
        <label>Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>copado__User_Story__c</fullName>
        <label>User Story</label>
        <referenceTo>copado__User_Story__c</referenceTo>
        <relationshipLabel>User Story Data Commits</relationshipLabel>
        <relationshipName>User_Story_Data_Commits</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
</CustomObject>